[project]
name = "pydantic-settings-doppler"
version = "0.1.0"
description = ""
authors = [
    {name = "Algirdas Jauniskis",email = "jauniskis.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-settings (>=2.0,<3.0)",
    "doppler-sdk (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyright = "^1.1.392.post0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
pytest = "^8.3.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = "^9.6.11"
mkdocs-git-committers-plugin = "^0.2.3"

[tool.bandit]
exclude_dirs = ["venv", "env", ".venv", "tests"]

[tool.flake8]
max-line-length = 90
exclude = ["venv", "env", ".venv", "__pycache__"]

[tool.pyright]
reportMissingImports = true
venv = ".venv"
venvPath = "."
exclude = [
    "**/__pycache__",
    "**/env",
    "**/venv",
    ".venv",
    "**/tests",
    "**/.*",
]
